# advent-of-code-rust

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
advent-of-code-app/: Cargo.toml  build.rs
advent-of-code-app/src/: main.rs
advent-of-code-esp/common/site/: Cargo.toml  build.rs
advent-of-code-esp/common/site/css/: highcontrast.css  prism.css  style.css  tree.css
advent-of-code-esp/common/site/js/: form.js  prism.js
advent-of-code-esp/common/site/src/: common_site_handler.rs  css_handler.rs  event_list_handler.rs  globals.rs  image_handler.rs  js_handler.rs  lib.rs  multipart.rs
advent-of-code-esp/common/site/templates/: about.html  base-day.html  base.html  day-list.html  day.html  event-list.html  image_handler.rs
advent-of-code-solutions/: Cargo.toml  build.rs
advent-of-code-solutions/src/: advent_of_code_2022.rs  advent_of_code_2023.rs  advent_of_code_2024.rs  aoc_solution.rs  lib.rs
advent-of-code-solutions/src/solutions/: mod.rs
advent-of-code-solutions/src/solutions/aoc2022/: day01.rs  day01_impl.rs  day02.rs  day02_impl.rs  day03.rs  day03_impl.rs  day04.rs  day04_impl.rs  day05.rs  day05_impl.rs  day06.rs  day06_impl.rs  mod.rs
advent-of-code-solutions/src/solutions/aoc2023/: day01.rs  day01_impl.rs  day02.rs  day02_impl.rs  day03.rs  day03_impl.rs  day04.rs  day04_impl.rs  day05.rs  day05_impl.rs  mod.rs
advent-of-code-solutions/src/solutions/aoc2024/: day01.rs  day01_impl.rs  day02.rs  day02_impl.rs  day03.rs  day03_impl.rs  day04.rs  day04_impl.rs  day05.rs  day05_impl.rs  day06.rs  day06_impl.rs  day07.rs  day07_impl.rs  day08.rs  day08_impl.rs  day09.rs  day09_impl.rs  day10.rs  day10_impl.rs  day11.rs  day11_impl.rs  day12.rs  day12_impl.rs  day13.rs  day13_impl.rs  day14.rs  day14_impl.rs  day15.rs  day15_impl.rs  day16.rs  day16_impl.rs  day17.rs  day17_impl.rs  day18.rs  day18_impl.rs  day19.rs  day19_impl.rs  day20.rs  day20_impl.rs  (+13 more)
advent-of-code-solutions/src/utils/: point.rs
advent-of-code-solutions/template/: day.rs.tpl  day_impl.rs.tpl
(+9 files in other folders)
