[package]
name = "advent-of-code-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-of-code-solutions={path = "../advent-of-code-solutions"}
clap = { version = "4.4.12", features = ["derive"] }
