[package]
name = "advent-of-code-solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
regex = "1.11.1"
lazy_static = "1.5.0"
num = "0.4.3"
pathfinding = "4.12.0"
hashbrown="0.15.2"

[features]
codegen = []