[package]
name = "site"
version = "0.2.0"
authors = ["Enrico Walther <enrico.walther@kleinhain.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.80.0"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4.22", default-features = false }
esp-idf-svc = { version = "0.49.1", default-features = false }
embedded-svc = "0.28.0"
anyhow = "1.0.93"
esp-idf-sys = "0.35.0"
esp-idf-hal = "0.44.1"
askama = "0.12.1"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
maplit = "1.0.2"
serde_json="1.0.133"

advent-of-code-solutions = { path = "../../../advent-of-code-solutions" }

[build-dependencies]
embuild = "0.32.0"
image = { version = "0.25", features = ["avif"] }
askama = { version ="0.12" }